fixing panels on mobile

--- a/app/assets/stylesheets/map/search.sass
+++ b/app/assets/stylesheets/map/search.sass
@@ -129,7 +129,12 @@ html
 
 .first-side-panel
   @include mobile
+    z-index: 9999
+    width: 100%
     height: 100%
+    max-height: 100%
+    left: 0
+    top: 0
   @include laptop-or-larger
     border-left: 0.5px solid #D8D8D8
     left: $first-panel-left-offset + $single-panel-width
